GEODE-10315: remove unneeded add-opens (#7699)